# Eigen

./: README.md
CMake/: main.cpp  rhs.mtx
CMake/Library-Sample/: CMakeLists.txt  main.cpp  matrix.mtx
CMake/Library-Sample/solver/: CMakeLists.txt  solver.cpp  solver.h
CMake/Solve-Sparse-Linear-System/: CMakeLists.txt
Example1/: Makefile  example.cpp
Example2/: example.cpp
Example3/: Makefile  example.cpp
Example4/: example  example.cpp
Example5/: example  example.cpp
HeatEquation_1D/: Makefile  heat1D
HeatEquation_1D/Data/: plot.py
HeatEquation_1D/VTK/: solution.vtk
HeatEquation_1D/include/: heat.h
HeatEquation_1D/src/: heat.cpp  main.cpp
HeatEquation_2D/: Makefile
HeatEquation_2D/VTK/: solution.vtk
HeatEquation_2D/include/: heat.h
HeatEquation_2D/src/: heat.cpp  main.cpp
Unitary-Test/: solution-makefile.txt
Unitary-Test/CMake-Version/: CMakeLists.txt  solver.cpp
Unitary-Test/CMake-Version/solvers/: CMakeLists.txt  eigen_solver.cpp  eigen_solver.h
Unitary-Test/Makefile-Version/: Makefile  solver.cpp
